--- a/index.html
+++ b/index.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task-3-ToDo App</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo App</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <div class="app">
-        <header>
-            <h1>
-                <i class="fas fa-check-circle"></i>
-                Mis Tareas</h1>
-                <p id="date"></p>
-        </header>
+      <header>
+        <h1>
+          <i class="fas fa-check-circle"></i>
+          Mis tareas
+        </h1>
+        <p id="date"></p>
+      </header>
 
-        <div class="todo-input">
-            <input type="text" id="task-input" placeholder="¿Qué vas a hacer hoy?">
-            <button id="add-task">
-                <i class="fas fa-plus"></i>
-            </button>
+      <div class="todo-input">
+        <input type="text" id="task-input" placeholder="What do you need to do?" />
+        <button id="add-task">
+          <i class="fas fa-plus"></i>
+        </button>
+      </div>
+
+      <div class="filters">
+        <span class="filter active" data-filter="all"> All </span>
+        <span class="filter" data-filter="active"> Active </span>
+        <span class="filter" data-filter="completed"> Completed </span>
+      </div>
+
+      <div class="todos-container">
+        <ul id="todos-list">
+          <!-- li will be inserted right here later in the video -->
+          <!-- <li class="todo-item">
+            <label class="checkbox-container">
+              <input type="checkbox" class="todo-checkbox" />
+              <span class="checkmark"></span>
+            </label>
+            <span class="todo-item-text">Buy groceries</span>
+            <button class="delete-btn"><i class="fas fa-times"></i></button>
+          </li> -->
+        </ul>
+        <div class="empty-state hidden">
+          <i class="fas fa-clipboard-list"></i>
+          <p>No tasks here yet</p>
         </div>
-        <div class="filters">
-            <span class="filter active" data-filter="all">Todo</span>
-             <span class="filter" data-filter="active">Activo</span>
-              <span class="filter" data-filter="completed">Completado</span>
-        </div>
-        <div class="todos-container">
+      </div>
 
-
-            <ul id="todos-list">
-                <!-- Las tareas se agregarán acá de forma dinámica-->
-                 <li class="todo-item">
-                    <label class="checkbox-container">
-                        <input type="checkbox" class="todo-checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-                    <span class="todo-item-text">Ir al super</span>
-                    <button class="delete-btn"><i class="fas fa-times"></i></button>
-                 </li>
-            </ul>
-            <div class="empty-state hidden">
-                <i class="fas fa-clipboard-list"></i>
-                <p>Aún no hay tareas</p>
-
-            </div>
-        
-        <footer>
-            <p id="items-left">No quedan tareas pendientes</p>
-            <button id="clear-completed">Borrado completado</button>
-        </footer>
-        </div>
+      <footer>
+        <p id="items-left">0 items left</p>
+        <button id="clear-completed">Clear completed</button>
+      </footer>
     </div>
 
-
-
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
