--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       </header>
 
       <div class="todo-input">
-        <input type="text" id="task-input" placeholder="What do you need to do?" />
+        <input type="text" id="task-input" placeholder="¿Qué vas a hacer hoy?" />
         <button id="add-task">
           <i class="fas fa-plus"></i>
         </button>
       </div>
 
       <div class="filters">
-        <span class="filter active" data-filter="all"> All </span>
-        <span class="filter" data-filter="active"> Active </span>
-        <span class="filter" data-filter="completed"> Completed </span>
+        <span class="filter active" data-filter="all"> Todas </span>
+        <span class="filter" data-filter="active"> Activas </span>
+        <span class="filter" data-filter="completed"> Completadas</span>
       </div>
 
       <div class="todos-container">
@@ -50,13 +50,13 @@
         </ul>
         <div class="empty-state hidden">
           <i class="fas fa-clipboard-list"></i>
-          <p>No tasks here yet</p>
+          <p>No hay  tareas</p>
         </div>
       </div>
 
       <footer>
-        <p id="items-left">0 items left</p>
-        <button id="clear-completed">Clear completed</button>
+        <p id="items-left">No quedan items</p>
+        <button id="clear-completed">Limpiar</button>
       </footer>
     </div>
 
